Fix header width on mobile devices by hiding anything boy background image in media queries (768px).

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@ body {
   font-family: 'Familjen Grotesk';
   background-color: #444;
   overflow: hidden;
+  width: 100vw;
 }
 
 li {
@@ -86,8 +87,9 @@ header {
 }
 
 .hero-boy {
-  max-width: 100%;
-  height: 50vh;
+  max-width: 400px;
+  /* width: auto; */
+  /* height: 30vh; */
   margin: auto;
 }
 
@@ -101,6 +103,7 @@ h2 {
   font-size: 2rem;
   color: #fff;
   text-shadow: 2px 2px #000;
+  text-align: center;
 }
 
 p {
@@ -231,11 +234,12 @@ nav {
   z-index: -1;
 }
 
-.anything-boy-bg-vid-page {
+.anything-boy-bg-promo {
   position: absolute;
   bottom: -200px;
   right: 700px;
   z-index: -1;
+  max-width: 100%;
 }
 
 .contact-list {
@@ -337,13 +341,14 @@ nav {
   }
 
   .hero-boy {
-    max-width: 70%;
-    margin: auto;
+    width: 50vw;
+  }
+  .anything-boy-bg {
+    display: none;
   }
 
-  .anything-boy-bg-vid-page {
-    bottom: -200px;
-    right: -600px;
+  .anything-boy-bg-promo {
+    display: none;
   }
 
   .flex-left {
